# cpp-statistics

./: CMakeLists.txt  README.md  istatistics.h  main.cpp  max.cpp  max.h  mean.cpp  mean.h  min.cpp  min.h  percentile90.cpp  percentile90.h  percentile95.cpp  percentile95.h  stddev.cpp  stddev.h
